Complete header with non-functional Navbar and logo design.
1) Designed and placed the logo on the webpage.
2)Added the Navbar component to the header, though it is not yet functional.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,7 +12,7 @@ html {
   text-rendering: optimizeLegibility;
 }
 .row {
-  max-width: 1140px;
+  max-width: 1400px;
   margin: 0 auto;
 }
 h1 {
@@ -35,7 +35,7 @@ header {
 }
 .hero-text-box {
   position: absolute;
-  width: 1140px;
+  width: 1400px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -73,4 +73,38 @@ header {
 .btn-full:hover,
 .btn-full:active {
   border: 1px solid #cf6d17;
+}
+.logo {
+  height: 100px;
+  width: auto;
+  float: left;
+  margin-top: 20px;
+}
+.logo:hover {
+  background-color: #4b5563;
+  border-radius: 50%;
+  transition: border-radius 0.2s;
+}
+.main-nav {
+  float: right;
+  list-style: none;
+  margin-top: 55px;
+}
+.main-nav li {
+  display: inline-block;
+  margin-left: 20px;
+}
+.main-nav li a:link,
+.main-nav li a:visited {
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 90%;
+  border-bottom: 2px solid transparent;
+  padding: 8px 0;
+  transition: border-bottom 0.2s;
+}
+.main-nav li a:hover,
+.main-nav li a:active {
+  border-bottom: 2px solid #e67e22;
 }
