--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,6 +26,8 @@ h1 {
   letter-spacing: 1px;
   word-spacing: 3px;
 }
+
+/* =======================================================Header================================================================ */
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url("img/hero-image.jpg");
@@ -107,4 +109,52 @@ header {
 .main-nav li a:hover,
 .main-nav li a:active {
   border-bottom: 2px solid #e67e22;
+}
+/* ======================================================================Feature Section================================================= */
+section {
+  padding: 80px 0px;
+}
+h2 {
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 180%;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+  /* font-weight: bold; */
+}
+h2:after {
+  display: block;
+  height: 2px;
+  background-color: #e67e22;
+  content: "";
+  width: 100px;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+.long-copy {
+  line-height: 145%;
+  width: 70%;
+  margin-left: 15%;
+}
+.box {
+  padding: 1%;
+}
+h3 {
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 110%;
+  margin-bottom: 15px;
+  /* font-weight: bold; */
+}
+.box p {
+  font-size: 90%;
+  line-height: 145%;
+}
+.icon-big {
+  font-size: 300%;
+  display: block;
+  color: #e67e22;
+  margin-bottom: 10px;
 }
