--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -137,7 +137,9 @@ h2:after {
   line-height: 145%;
   width: 70%;
   margin-left: 15%;
+  margin-bottom: 30px;
 }
+
 .box {
   padding: 1%;
 }
@@ -157,4 +159,34 @@ h3 {
   display: block;
   color: #e67e22;
   margin-bottom: 10px;
+}
+/* =============================================================Meals Section======================================================== */
+.section-meals {
+  padding: 0;
+}
+.meals-showcase {
+  list-style: none;
+  width: 100%;
+}
+.meals-showcase li {
+  display: block;
+  float: left;
+  width: 25%;
+}
+.meal-photo {
+  width: 100%;
+  margin: 0;
+  overflow: hidden;
+  background-color: #000;
+  transition: transform 0.5s, opacity 0.5s;
+}
+.meal-photo img {
+  width: 100%;
+  height: 30vh;
+  transform: scale(1.15);
+  opacity: 0.7;
+}
+.meal-photo img:hover {
+  transform: scale(1);
+  opacity: 1;
 }
