--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -190,3 +190,56 @@ h3 {
   transform: scale(1);
   opacity: 1;
 }
+.clearfix {
+  zoom: 1;
+}
+.clearfix:after {
+  content: ".";
+  clear: both;
+  display: block;
+  height: 0;
+  visibility: hidden;
+}
+/* =============================How it Works Section?============================= */
+.section-steps {
+  background-color: #e2e8f0;
+}
+.steps-box:first-child {
+  text-align: center;
+  padding-right: 3%;
+  margin-top: 30px;
+}
+
+.steps-box:last-child {
+  padding-left: 3%;
+  margin-top: 30px;
+}
+.works-step {
+  margin-bottom: 50px;
+  margin-right: 25px;
+}
+.app-screen {
+  width: 50%;
+  box-shadow: 10px 10px 5px #aaaaaa;
+}
+.works-step div {
+  color: #e67e22;
+  border: 4px solid #e67e22;
+  display: inline-block;
+  border-radius: 50%;
+  height: 55px;
+  width: 55px;
+  text-align: center;
+  padding: 5px;
+  margin-right: 25px;
+  float: left;
+  font-size: 150%;
+}
+.works-step:last-of-type {
+  margin-bottom: 80px;
+}
+.btn-app img {
+  height: 50px;
+  width: auto;
+  margin-right: 10px;
+}
