--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -243,4 +243,40 @@ h3 {
   width: auto;
   margin-right: 10px;
 }
+.btn-app:link,
+.btn-app:visited {
+  border: 0;
+}
 /* ================================Cities Section======================= */
+.box img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 15px;
+}
+.city-feature {
+  margin-bottom: 5px;
+}
+.icon-small {
+  display: inline-block;
+  width: 30px;
+  text-align: center;
+  color: #e67e22;
+  font-size: 120%;
+  line-height: 120%;
+  vertical-align: middle;
+  margin: -5px;
+  margin-right: 10px;
+}
+a:link,
+a:visited {
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid #e67e22;
+  padding-bottom: 1px;
+}
+a:hover,
+a:active {
+  color: #555;
+  border-bottom: 1px solid transparent;
+  transition: border-bottom 0.5s, color 0.5s;
+}
