--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,6 +31,7 @@ h1 {
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url("img/hero-image.jpg");
+  background-attachment: fixed;
   height: 100vh;
   background-size: cover;
   background-position: center;
@@ -279,4 +280,38 @@ a:active {
   color: #555;
   border-bottom: 1px solid transparent;
   transition: border-bottom 0.5s, color 0.5s;
+}
+/* ========================= Testimonials =========== */
+.section-testimonials {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url(img/bg-cust.jpg);
+  background-size: cover;
+  color: white;
+  background-attachment: fixed;
+}
+blockquote {
+  padding: 2%;
+  font-style: italic;
+  line-height: 145%;
+  margin-top: 40px;
+  position: relative;
+}
+cite {
+  font-size: 90%;
+  display: block;
+  margin-top: 24px;
+}
+cite img {
+  height: 45px;
+  border-radius: 50%;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+blockquote::before {
+  content: "\201C"; /*Code used for quotation marks*/
+  font-size: 400%;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -3px;
 }
