--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,13 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
-html {
+html,
+body {
   background-color: #ffffff;
   color: #555;
   font-family: Lato, sans-serif;
   font-weight: 300;
   font-size: 20px;
   text-rendering: optimizeLegibility;
+  overflow-x: hidden;
 }
 .row {
   max-width: 1400px;
